# downloader

./: .gitignore  requirements.txt  setup.cfg  setup.py
witanime/: __main__.py  animesanka_main.py  main.py  witanime_main.py  zimabadk_main.py
witanime/anime_site/: animesanka_extractor.py  test.html  witanime_extractor.py  zimabadk_extractor.py
witanime/utils/: async_downloader.py
witanime/video_providers/: 4shared  4shared.py  all_server_links.py  drive.py  mediafire.py  meganz.py  mp4upload.py  okru.py  uploadourvideo.py  videa.py  yonaplay.py
