[metadata]
name = witanime
version = 1.0.0

[options]
packages = witanime

[options.entry_points]
console_scripts =
    witanime = witanime.witanime_main:main
    # animesanka = witanime.__main__:animesanka
    
install_requires =
    requests
    beautifulsoup4
    gdown
    mediafire-dl @ git+https://github.com/Juvenal-Yescas/mediafire-dl
